# mcp-ssh-interactive

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ssh_mcp_server/: __init__.py  config.py  server.py  ssh_session.py  state.py  tmux_wrapper.py
src/ssh_mcp_server/tools/: __init__.py  connection.py  execution.py  list_configs.py  server_info.py  terminal.py
tests/: test_config_state.py  test_integration.py  test_server_info.py  test_ssh_session.py  test_tmux.py
